* clear some warnings of findbug